--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,6 @@ v0.1.0:
   changes:
     - Initial release
 
-
 v0.1.1:
   date: Sep 1, 2012
   changes:
@@ -18,3 +17,8 @@ v0.1.3:
   date: Oct 14, 2012
   changes:
     - Adjustments towards grunt file api
+
+v0.1.3:
+  date: Jan 16, 2013
+  changes:
+    - Compatibility with Grunt 0.4
