--- a/CHANGELOG
+++ b/CHANGELOG
@@ -22,3 +22,8 @@ v0.1.3:
   date: Jan 16, 2013
   changes:
     - Compatibility with Grunt 0.4
+
+v0.2.1:
+  date: Jan 29, 2013
+  changes:
+    - Compatibility with new Grunt 0.4 file API
