--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,3 +27,14 @@ v0.2.1:
   date: Jan 29, 2013
   changes:
     - Compatibility with new Grunt 0.4 file API
+
+v0.2.2:
+  date: Feb 26, 2013
+  changes:
+    - Allows to process multiple files within one target
+
+v0.2.3:
+  date: May 13, 2013
+  changes:
+    - Supports wildcards in files option
+
